# EasyProtoBuf

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: cmake-multi-platform.yml
codegen/: README.md  codegen.cpp  descriptor.pb.cpp  main.cpp  utils.cpp
examples/decoder/: decoder.cpp
examples/tutorial/: README.md  main.cpp  tutorial.pb.cpp  tutorial.proto
include/: easypb.hpp
include/easypb/: common.hpp  decoder.hpp  encoder.hpp
